k8s/api-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
      - name: api
        image: aidang/shorten-api
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
  - port: 3000
    targetPort: 3000
