k8s/workspace-client-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-client-deployment
spec:
  selector:
    matchLabels:
      component: workspace-client
  template:
    metadata:
      labels:
        component: workspace-client
    spec:
      containers:
      - name: workspace-client
        image: aidang/shorten-workspace-client
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: workspace-client-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: workspace-client
  ports:
  - port: 8080
    targetPort: 8080
