k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - srn.pw
        - '*.srn.pw'
      secretName: srn-pw
  rules:
    - host: '*.srn.pw'
      http:
        paths:
          - backend:
              serviceName: workspace-client-cluster-ip
              servicePort: 8080
    - host: srn.pw
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: main-client-cluster-ip
              servicePort: 8080
          - path: /api/?(.*)
            backend:
              serviceName: api-cluster-ip
              servicePort: 3000
